--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   
-  <h1 class="user"></h1>
+  <div id="user"></div>
 
+  
   <script src="js/script.js"></script>
 </body>
 </html>
